--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Aravind's Portal</h1>
     <h2>About Me</h2>
     <p>Student</p>
-    <p>I am pursuing B.E. mechanical Engineering in PSNACET</p>
+    <p>Pursuing B.E. mechanical Engineering in PSNACET</p>
     <h2>Credentials and Portfolio</h2>
 
     <p><a href='resume.html'>My Resume</a> | <a href='https://github.com/Aravind195'>My GitHub</a></p>
