--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     <img src="images/headshot.jpg" alt="Aravind's headshot" width="20%">
 
     <h1>Aravind</h1>
-    <h4>Student, Mechanical Engineer</h4>
+    <h4>Student</h4>
 
     <p>Email: <a href="mailto:srtaravind483@gmail.com" target="_blank">srtaravind483@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
